# Workshop-TimeSeries-Forecaster

./: .dockerignore  .gitignore  Dockerfile  README.md  Workshop_Notebook_TimeSeries Forecaster.ipynb  environment.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
_solution/: Workshop_Notebook_TimeSeries Forecaster.ipynb  main.py
data/: test_data_grid.csv
modules/: download_button.py  fetch_data.py  forecast_multivariate.py  forecast_univariate.py  helper.py
