[tool.poetry]
name = "workshop-timeseries-forecaster"
version = "0.1.0"
description = ""
authors = ["AI Center of Excellence"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.*"
prophet = "^1.1.2"
plotly = "^5.13.0"
streamlit = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
